// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`LogEntry > (Snapshot) renders core log entry 1`] = `
<div
  class="border-border/50 grid grid-cols-[auto_auto_auto_1fr] items-start gap-2 border-b px-2 py-2 font-mono text-sm border-l-[3px] border-l-accent-cyan"
>
  <span
    class="text-foreground/60 whitespace-nowrap"
    data-testid="log-timestamp"
  >
    12:30:45.123
  </span>
  <button
    class="inline-flex w-14 items-center justify-center rounded px-1.5 py-0.5 text-xs font-bold uppercase bg-accent-cyan text-foreground cursor-pointer hover:opacity-80"
    data-testid="log-level"
    type="button"
  >
    INFO
  </button>
  <button
    class="inline-flex items-center justify-center rounded-full px-2 py-0.5 text-xs font-medium bg-foreground/10 text-foreground cursor-pointer hover:opacity-80"
    data-testid="log-scope"
    type="button"
  >
    app
  </button>
  <div>
    <span
      class="text-foreground break-all whitespace-pre-wrap"
      data-testid="log-message"
    >
      Application started
    </span>
  </div>
</div>
`;

exports[`LogEntry > (Snapshot) renders plugin log entry 1`] = `
<div
  class="border-border/50 grid grid-cols-[auto_auto_auto_1fr] items-start gap-2 border-b px-2 py-2 font-mono text-sm border-l-[3px] border-l-accent-cyan"
>
  <span
    class="text-foreground/60 whitespace-nowrap"
    data-testid="log-timestamp"
  >
    12:30:45.123
  </span>
  <button
    class="inline-flex w-14 items-center justify-center rounded px-1.5 py-0.5 text-xs font-bold uppercase bg-accent-cyan text-foreground cursor-pointer hover:opacity-80"
    data-testid="log-level"
    type="button"
  >
    INFO
  </button>
  <button
    class="inline-flex items-center justify-center rounded-full px-2 py-0.5 text-xs font-medium bg-accent-orange/50 text-foreground cursor-pointer hover:opacity-80"
    data-testid="log-scope"
    type="button"
  >
    youtube-music
  </button>
  <div>
    <span
      class="text-foreground break-all whitespace-pre-wrap"
      data-testid="log-message"
    >
      Application started
    </span>
  </div>
</div>
`;
